# wordle_bot

./: .gitignore  Cargo.toml  database.sqlite
.github/workflows/: rust.yml
migrations/: 20230114113221_inital.sql
src/: .main.rs.rustfmt  bot.rs  database.rs  error.rs  main.rs  parser.rs  player.rs  scoresheet.rs  utils.rs
src/command/: daily.rs  mod.rs  score.rs  stats.rs
