[package]
name = "wordle_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "temp_cache", "chrono"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.5.7", features = ["runtime-tokio-rustls", "sqlite", "offline"] }
dotenv = "0.15.0"
log = "0.4.17"
env_logger = "0.10.0"
rand = "0.8.5"
chrono = "0.4.23"
nom = "7.1.3"
anyhow = "1.0.71"
